--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -585,3 +585,75 @@ header .cta-button .button-text {
   right: 30px;
 }
 /* end food menu section */
+
+/* happy clients section */
+.happy-clients {
+  background-image: url('../img/happy-clients-background.png');
+
+}
+
+.happy-clients .overlay {
+  background-color: rgba(254,76,141 ,0.85);
+  padding: 100px 0;
+}
+
+.happy-clients .container {
+  display: flex;
+  flex-direction: column;
+}
+
+.happy-clients .container h2 {
+  color: #ffffff;
+  font-family: 'Playfair Display', serif;
+  font-size: 35px;
+  font-weight: 700;
+  text-align: center;
+}
+
+.happy-clients .clients-review {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.happy-clients .review-item {
+  position: relative;
+  max-width: 880px;
+  width: 100%;
+}
+
+
+.happy-clients p.comment {
+  max-width: 740px;
+  width: 100%;
+  padding: 0;
+  margin: 0 auto;
+  color: #ffffff;
+  font-family: 'Sintony', sans-serif;
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 26px;
+  text-align: center;
+}
+
+.happy-clients .comment:after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  content: '"';
+  color: #ffffff;
+  font-family: 'Playfair Display', serif;
+  font-size: 60px;
+  font-weight: 700;
+}
+
+.happy-clients .comment:before {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  content: '"';
+  color: #ffffff;
+  font-family: 'Playfair Display', serif;
+  font-size: 60px;
+  font-weight: 400;
+}
