complete happy clientsy section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -600,6 +600,7 @@ header .cta-button .button-text {
 .happy-clients .container {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .happy-clients .container h2 {
@@ -608,12 +609,15 @@ header .cta-button .button-text {
   font-size: 35px;
   font-weight: 700;
   text-align: center;
+  margin: 0 0 25px 0;
 }
 
 .happy-clients .clients-review {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  max-width: 1170px;
+  width: 100%;
 }
 
 .happy-clients .review-item {
@@ -621,7 +625,6 @@ header .cta-button .button-text {
   max-width: 880px;
   width: 100%;
 }
-
 
 .happy-clients p.comment {
   max-width: 740px;
@@ -655,5 +658,24 @@ header .cta-button .button-text {
   color: #ffffff;
   font-family: 'Playfair Display', serif;
   font-size: 60px;
+  font-weight: 700;
+}
+
+.happy-clients .user-info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 740px;
+  width: 100%;
+  margin-top: 25px;
+}
+
+.happy-clients .user-info p {
+  color: #fffaf1;
+  font-family: 'Sintony', sans-serif;
+  font-size: 16px;
   font-weight: 400;
+  text-transform: uppercase;
+  text-align: center;
+  margin: 15px 0 10px;
 }
